syntax = "proto3";

option go_package = "github.com/computerdane/nf6";

package nf6;

service Nf6Insecure {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc Register (RegisterRequest) returns (RegisterReply) {}
}

message PingRequest {
  bool ping = 1;
}

message PingResponse {
  bool pong = 1;
}

message RegisterRequest {
  string email = 1;
  string sshPublicKey = 2;
  string sslCsr = 3;
}

message RegisterReply {
  string sslCert = 1;
}

service Nf6 {
  rpc GetMachine (GetMachineRequest) returns (GetMachineReply) {}
  rpc GetRepo (GetRepoRequest) returns (GetRepoReply) {}

  rpc RebuildSystem (RebuildSystemRequest) returns (RebuildSystemReply) {}
}

message GetMachineRequest {
  string hostName = 1;
}

message GetMachineReply {
  string address = 1;
  string jumpAddress = 2;
}

message GetRepoRequest {
  string repoName = 1;
}

message GetRepoReply {
  string repoUrl = 1;
}

message RebuildSystemRequest {
  string hostName = 1;
  optional string repoName = 2;
}

message RebuildSystemReply {
  string buildId = 1;
}
